# home-automation

./: .cursor-rules  CMakeLists.txt  LICENSE  README.md
loxone/scripts/: ev-eco-power-calculation.c  pv-production-prediction.c  pv-production-prediction.h  pv-production-prediction.test.c  water-tank-heating-controller.c  wattsonic-inverter-state-manager.c
src/lib/: forecast_solar.c  forecast_solar.h  forecast_solar.test.c  nx_json.c  nx_json.h  nx_json.internal.test.c  nx_json.test.c  picoc.h
src/lib/mocks/: forecast_solar_response.txt  forecast_solar_response_body.json  forecast_solar_response_body_oneline.json
src/loxone/: pv-production-prediction.c  water-tank-heating-controller.c
src/loxone/scripts/: wattsonic-inverter-state-manager.c
src/loxone/scripts/test/: sample-meteo-blue-responses.json  simple-json-samples.json
